tests/errors/error_undefined_var.nimmy
# Error: Using an undefined variable
echo x